--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ server.port=9090
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=postgres
-spring.datasource.password=Python@123
+spring.datasource.password=admin
 spring.jpa.properties.hibernate.default_schema=foodorderingdev
