--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=9090
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=Python@123
 spring.jpa.properties.hibernate.default_schema=foodorderingdev
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
